hphp/hack/test/typecheck/gen4a.php.exp
File "gen4a.php", line 20, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "gen4a.php", line 20, characters 28-28:
Some type constraint(s) are violated here
File "gen4a.php", line 20, characters 23-23:
T is a constrained type parameter
File "gen4a.php", line 20, characters 28-28:
Expected B
File "gen4a.php", line 20, characters 23-23:
But got T
